@startuml

title __FSM's Class Diagram__\n

  package  {
    package engine.ai.fsm {
      abstract class FSM {
          ~ maxHP : float
          + FSM()
          {abstract} + easyAiFetchAction()
          {abstract} + normalAiFetchAction()
          {abstract} + hardAiFetchAction()
      }
    }
  }
  

  package  {
    package engine.ai.fsm {
      class FSMManager {
          + FSMManager()
          + fetchAction()
          - initializeProperFSM()
      }
    }
  }
  

  package  {
    package engine.ai.fsm {
      class HillFSM {
          + HillFSM()
          + easyAiFetchAction()
          + normalAiFetchAction()
          + hardAiFetchAction()
      }
    }
  }
  

  package  {
    package engine.ai.fsm {
      class KillsFSM {
          + KillsFSM()
          + easyAiFetchAction()
          + normalAiFetchAction()
          + hardAiFetchAction()
      }
    }
  }
  

  package  {
    package engine.ai.fsm {
      class RegicideFSM {
          + RegicideFSM()
          + easyAiFetchAction()
          + normalAiFetchAction()
          + hardAiFetchAction()
      }
    }
  }
  

  package  {
    package engine.ai.fsm {
      class TimedFSM {
          + TimedFSM()
          + easyAiFetchAction()
          + normalAiFetchAction()
          + hardAiFetchAction()
      }
    }
  }
  

  FSM o-- Player : aiPlayer
  FSM o-- AiController : aiCon
  FSM o-- AiCalculations : calc
  FSMManager o-- AiController : aiCon
  FSMManager o-- FSM : fsm
  HillFSM -up-|> FSM
  KillsFSM -up-|> FSM
  RegicideFSM -up-|> FSM
  TimedFSM -up-|> FSM


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
